data/derived/comb/progs/unify/prog2607.ml.out
Characters 148-149:
  let base =  0 [0] in
              ^
Error: This expression has type int
       This is not a function; it cannot be applied.
